--- a/index25.html
+++ b/index25.html
@@ -15,7 +15,7 @@ box-sizing: border-box;
 float: left;
 width: 50%;
 padding: 10px;
-height: 300px; /* Should be removed. Only for demonstration */
+ /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
