--- a/index20.html
+++ b/index20.html
@@ -102,7 +102,7 @@
                  <span class="mdc-button__label">ENABLE WEBCAM</span>
                </button>
                <div style="position: relative;">
-                 <video id="webcam" style="width: 100%; height:1290; position: abso" autoplay playsinline></video>
+                 <video id="webcam" class="clip-polygon" style="height:1290px; position: abso" autoplay playsinline></video>
                  <canvas class="output_canvas" id="output_canvas" width="720" height="1280" style="position: absolute; left: 0px; top: 0px;"></canvas>
                </div>
              </div>
@@ -217,8 +217,8 @@
     let runningMode = "IMAGE";
     let enableWebcamButton;
     let webcamRunning = false;
-    const videoHeight = "360px";
-    const videoWidth = "480px";
+    const videoHeight = "1280px";
+    const videoWidth = "100%";
 
     const createPoseLandmarker = async () => {
         const vision = await FilesetResolver.forVisionTasks("https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm");
