--- a/index25.html
+++ b/index25.html
@@ -389,6 +389,19 @@ chart1.render();
     Your browser does not support the canvas element.
 </canvas>
 <button onclick="start_line_cont();">Find Angle</button>
+<div id="body_joints">
+<div id="nose">nose</div>
+<div id="mouth">mouth</div>
+<div id="lefteye">left_eye</div>
+<div id="lefteye">right_eye</div>
+<div id="mouth">right_ear</div>
+<div id="nose">left_ear</div>
+<div id="mouth">mputh</div>
+<div id="lefteye">left_shoulder</div>
+<div id="lefteye">right_shoulder</div>
+<div id="mouth"></div>
+
+</div>
 
 <script>
     // create canvas element and append it to document body
