--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </svg>
 </a>
         <!-- Second SVG (Body) -->
-        <a href="/testar3.html">
+        <a href="https://bemyfr1end.vercel.app/">
         <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
           <!-- Arc (1/3 of a circle) -->
           <path d="M 100,100 L 172,50 A 100,100 0 0,1 100,200 Z" fill="lightgreen" />
